--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-mui-path-imports": "0.0.15",
     "eslint-plugin-no-relative-import-paths": "1.5.2",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-simple-import-sort": "10.0.0",
@@ -37,4 +38,3 @@
     "typescript": "5.0.4"
   }
 }
-
