--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "prettier": "2.8.7",
     "sort-package-json": "2.4.1",
+    "ts-node": "10.9.1",
     "typescript": "5.0.4"
   }
 }
