--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "format": "prettier --write \"pages/**/*.{ts,tsx}\"",
     "lint": "next lint",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -16,14 +16,18 @@
     "@fontsource/roboto": "4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "5.11.16",
+    "axios": "1.3.5",
+    "moment": "2.29.4",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "url-parse": "1.5.10"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@typescript-eslint/eslint-plugin": "5.57.1",
+    "cross-env": "7.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "8.8.0",
