--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-youtube": "10.1.0",
     "url-parse": "1.5.10"
   },
   "devDependencies": {
