setting port in start scripts

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev --port 5000",
     "format": "prettier --write \"pages/**/*.{ts,tsx}\"",
     "lint": "next lint",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "sort": "sort-package-json",
-    "start": "next start"
+    "start": "next start --port 5000"
   },
   "dependencies": {
     "@emotion/react": "11.10.6",
