--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "next lint",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "sort": "sort-package-json",
-    "start": "next start --port 5000"
+    "start": "next start --port 5000",
+    "deploy": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
     "@emotion/react": "11.10.6",
@@ -17,6 +18,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "5.11.16",
     "axios": "1.3.5",
+    "cross-env": "7.0.3",
     "moment": "2.29.4",
     "next": "13.3.0",
     "react": "18.2.0",
@@ -28,7 +30,6 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@typescript-eslint/eslint-plugin": "5.57.1",
-    "cross-env": "7.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "8.8.0",
